# Bethesda-AI-Translator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Manual.txt  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: GlossaryTab.tsx  Header.tsx  LogViewer.tsx  NpcProfilesTab.tsx  ProperNounExtractor.tsx  SettingsModal.tsx  TranslationTable.tsx
src/i18n/: translations.ts
src/services/: glossaryService.ts  xmlParser.ts
src/services/ai/: aiFactory.ts  geminiProvider.ts  localLlmProvider.ts  openAiProvider.ts  recoveryService.ts  types.ts
src/types/: index.ts
