[package]
name = "bethesda-ai-translator"
version = "1.0.0"
description = "Bethesda AI Translator"
authors = ["tomy6764kuma"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-http = { version = "2.5.9", features = ["unsafe-headers"] }
rfd = "0.15"
tauri-plugin-updater = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
